# NEAGame

./: CMakeLists.txt  README.md  t.cpp
resources/tilemaps/: forest_tiles.tsx  map.tmx  terrain.tsx
src/: appdata.cpp  appdata.hpp  controller.cpp  controller.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  main.cpp  main.hpp  mixer.cpp  mixer.hpp  mob.cpp  mob.hpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp
